// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TooltipPopover render should render tooltip popover 1`] = `
<EuiPopover
  anchorPosition="upCenter"
  button={
    <div
      style={
        Object {
          "background": "none",
          "height": "26px",
          "width": "26px",
        }
      }
    />
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="mapTooltip"
  isOpen={true}
  ownFocus={false}
  panelPaddingSize="m"
  style={
    Object {
      "pointerEvents": "none",
      "transform": "translate(NaNpx, 2987px)",
    }
  }
>
  <EuiText
    size="xs"
    style={
      Object {
        "maxWidth": "425px",
      }
    }
  >
    <FeaturesTooltip
      addFilters={[Function]}
      closeTooltip={[Function]}
      features={
        Array [
          Object {
            "geometry": Object {},
            "id": 1,
            "layerId": "tfi3f",
          },
        ]
      }
      findLayerById={[Function]}
      geoFields={
        Array [
          Object {},
        ]
      }
      getLayerName={[Function]}
      isLocked={false}
      loadFeatureGeometry={[Function]}
      loadFeatureProperties={[Function]}
      loadPreIndexedShape={[Function]}
    />
  </EuiText>
</EuiPopover>
`;

exports[`TooltipPopover render should render tooltip popover with custom tooltip content when renderTooltipContent provided 1`] = `
<EuiPopover
  anchorPosition="upCenter"
  button={
    <div
      style={
        Object {
          "background": "none",
          "height": "26px",
          "width": "26px",
        }
      }
    />
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="mapTooltip"
  isOpen={true}
  ownFocus={false}
  panelPaddingSize="m"
  style={
    Object {
      "pointerEvents": "none",
      "transform": "translate(NaNpx, 2987px)",
    }
  }
>
  <div
    addFilters={[Function]}
    closeTooltip={[Function]}
    features={
      Array [
        Object {
          "geometry": Object {},
          "id": 1,
          "layerId": "tfi3f",
        },
      ]
    }
    getLayerName={[Function]}
    isLocked={false}
    loadFeatureGeometry={[Function]}
    loadFeatureProperties={[Function]}
  >
    Custom tooltip content
  </div>
</EuiPopover>
`;
